# ari

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
ari/: __main__.py
ari/cogs/: shell.py
ari/helpers/: command_paginator.py  shell.py
